# src/main/resources/openapi.yaml
@@ -1354,6 +1354,24 @@ components:
         cardCount:
           type: integer
           format: int64
+        newCards:
+          type: integer
+          format: int64
+        learningCards:
+          type: integer
+          format: int64
+        reviewCards:
+          type: integer
+          format: int64
+        dueCards:
+          type: integer
+          format: int64
+        totalCards:
+          type: integer
+          format: int64
+        lastStudied:
+          type: integer
+          format: int64
     LocalDateTime:
       type: string
       format: date-time
